# todoer

./: Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  db.rs  input.rs  lib.rs  main.rs  models.rs  output.rs  project.rs  repo.rs
src/commands/: init.rs  list.rs  mod.rs  new.rs  task.rs
tests/: commands_init.rs  commands_list.rs  commands_new.rs  commands_task.rs  config_resolution.rs  db_schema.rs  input.rs  models.rs  output_table.rs  project_discovery.rs  project_resolution.rs  repo.rs
